# thanatos_socks

./: README.md
Payload_Type/thanatos/: Dockerfile
Payload_Type/thanatos/mythic/agent_functions/: askcreds.py
Payload_Type/thanatos/mythic/browser_scripts/: screenshot.js
Payload_Type/thanatos/thanatos/agent_code/: Cargo.toml
Payload_Type/thanatos/thanatos/agent_code/src/: agent.rs  askcreds.rs  clipboard.rs  download.rs  lib.rs  main.rs  screenshot.rs  shinject.rs  socks.rs  tasking.rs  upload.rs
Payload_Type/thanatos/thanatos/agent_code/src/profiles/: http.rs  mod.rs
Payload_Type/thanatos/thanatos/agent_code/src/ssh/: download.rs  spawn.rs  upload.rs
Payload_Type/thanatos/thanatos/agent_code/src/utils/: windows.rs
Payload_Type/thanatos/thanatos/mythic/agent_functions/: askcreds.py  builder.py  clipboard.py  screenshot.py  shinject.py  socks.py
