[workspace]
members = ["shared"]

[package]
name = "thanatos"
version = "0.1.13"
authors = ["Matt Ehrnschwender (@M_alphaaa)"]
edition = "2021"


[profile.release]
strip = "symbols"

[dependencies]
aes = "0.7.5"
block-modes = "0.8.1"
cfg-if = "1.0"
chrono = "0.4"
hmac = "0.11"
path-clean = "0.1.0"
rand = "0.8"
serde_json = "1.0"
sha2 = "0.9.8"
netstat2 = "0.11.1"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
once_cell = "1.18"


[dependencies.minreq]
version = "2.4.2"
features = ["https-rustls-probe"]

[dependencies.openssl]
version = "0.10.45"
features = ["vendored"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.ssh2]
version = "0.9.3"
features = ["vendored-openssl"]

[dependencies.tokio]
version = "1.47.1"            # upgrade from 1.16.1
features = [
  "net",
  "rt-multi-thread",
  "io-util",
  "macros",
  "process",
  "time",
  "sync"                     
]

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-acl = "0.1.0"
wmi = "0.9.2"

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3.9"
features = [
  "aclapi",
  "errhandlingapi",
  "impl-default",
  "securitybaseapi",
  "tlhelp32",
  "winbase",
  "wincon",
  "wow64apiset",
  "sysinfoapi"
]
