[workspace]
members = ["shared"]

[package]
name = "thanatos"
version = "0.1.14"
authors = ["Matt Ehrnschwender (@M_alphaaa)"]
edition = "2021"

[profile.release]
strip = "symbols"

[dependencies]
# === Core serialization ===
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# === SOCKS + base64 queue ===
base64 = "0.21.7"
once_cell = "1.19"

# === Cryptography & encoding ===
aes = "0.6"
block-modes = "0.6"
hmac = "0.10"
sha2 = "0.8"

# === Miscellaneous ===
cfg-if = "1.0.0"
chrono = "0.4"
path-clean = "0.1.0"
rand = "0.8"
netstat2 = "0.11.1"

# === Networking / HTTP ===
minreq = { version = "2.3", features = ["https-rustls-probe"] }

# === Async runtime ===
tokio = { version = "1.20", features = ["net", "rt-multi-thread", "io-util", "macros", "process", "sync", "time"] }

# === Native crypto / SSH ===
openssl = { version = "0.10", features = ["vendored"] }
ssh2 = { version = "0.9", features = ["vendored-openssl"] }

# === Platform-specific dependencies ===
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-acl = "0.1"
wmi = "0.9"

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3"
features = [
  "aclapi",
  "errhandlingapi",
  "impl-default",
  "securitybaseapi",
  "tlhelp32",
  "winbase",
  "wincon",
  "wow64apiset",
  "sysinfoapi"
]
